# rsllama

./: .gitignore  .gitmodules  Cargo.toml  build.rs  get-model.sh
native/: CMakeLists.txt  rsllama.cpp  rsllama.h
src/: main.rs
